...
                android:paddingBottom="8dp"
                android:background="@drawable/spinner_background"
                app:layout_constraintStart_toEndOf="@id/tvImportInto"
                app:layout_constraintTop_toBottomOf="@id/tvImportText" />

            <ImageButton
                android:id="@+id/imgBtnUploadFile"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="128dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/upload"
...
                android:src="@drawable/import_file"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:backgroundTint="#f8c63d"
                android:text="@string/import_files_btn"
                android:textColor="@color/black"
...
