<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/importing"
        android:icon="@drawable/importar"
        android:title="@string/import_" />
    <item
        android:id="@+id/fullLibrary"
        android:icon="@drawable/book"
        android:title="@string/library" />
        <item
        android:id="@+id/profile"
        android:icon="@drawable/account"
        android:title="@string/profile"
    />

</menu>